# libefiling

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish-pypi.yml
docs/: README.md  archive_structure_notes.md  benchmark_resize_isolated.py  manifest.md
scripts/: publish.sh  run_test_parse.sh
src/libefiling/: __init__.py  charset.py  cli.py  default_config.py  manifest.py  parse.py
src/libefiling/archive/: aaa.py  check.py  extract.py  handler.py  nnf.py  utils.py
src/libefiling/image/: convert.py  kind.py  ocr.py  params.py  results.py  save_as_xml.py
src/libefiling/manifest/: model.py
src/libefiling/ocr/: ocr.py
src/libefiling/xml/: kind.py  utils.py
tests/: benchmark_process_images.py  benchmark_resize.py  benchmark_resize_isolated.py  test_archive.py  test_charset.py  test_image.py  test_ocr.py  test_parse.py
