[project]
name = "libefiling"
version = "0.1.49"
description = "A Python library for e-filing systems."
authors = [{ name = "hyperion13th144m", email = "hyperion13th144m@gmail.com" }]
requires-python = ">=3.12"
readme = "README.md"
license = "MIT"
keywords = ["example", "testpypi", "demo"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "asn1crypto (>=1.5.1,<2.0.0)",
    "pillow (>=12.0.0,<13.0.0)",
    "pytesseract (>=0.3.13,<0.4.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
]

[project.urls]
Homepage = "https://github.com/hyperion13th144m/libefiling"
Repository = "https://github.com/hyperion13th144m/libefiling"

[project.scripts]
libefiling = "libefiling.cli:main"

[tool.hatch.build.targets.sdist]
include = ["src/libefiling"]

[tool.hatch.build.targets.sdist.force-include]
"docs" = "docs"

[tool.hatch.build.targets.wheel]
include = ["src/libefiling"]

[tool.hatch.build.targets.wheel.sources]
"src/libefiling" = "libefiling"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
